--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Vedavyasy/Githubapptest#readme",
   "devDependencies": {
+    "@octokit/auth-app": "^4.0.7",
+    "@octokit/request": "^6.2.2",
     "@types/dedent": "^0.7.0",
     "@types/node": "^18.11.15",
     "typescript": "^4.9.4"
