--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@octokit/request": "^6.2.2",
     "@types/dedent": "^0.7.0",
     "@types/node": "^18.11.15",
+    "@types/node-fetch": "^2.6.2",
     "typescript": "^4.9.4"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "dedent": "^0.7.0"
+    "dedent": "^0.7.0",
+    "node-fetch": "^2.6.7"
   }
 }
