--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "dedent": "^0.7.0",
+    "jsonwebtoken": "^9.0.0",
     "node-fetch": "^2.6.7"
   }
 }
