--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,11 +29,11 @@ jobs:
         run: npm run build
 
       - name: Run my action
-        uses: ./
+        uses: ./ >>$GITHUB_OUTPUT
         with:
           name: "Sample"
           ghtoken: ${{secrets.GITHUB_TOKEN}}
       - name: output values
-        run: echo ${{ steps.run_my_action.outputs.token }}
+        run: echo ${{ join(steps.run_my_action.outputs.*,'\n') }}
             echo "Dummy  value"
             
