--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build
 
       - name: Run my action
-        uses: ./ >>$GITHUB_OUTPUT
+        uses: ./ 
         with:
           name: "Sample"
           ghtoken: ${{secrets.GITHUB_TOKEN}}
