--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
       "types": ["node"],
       "composite": true
     },
-    "include": ["src/**/*.ts", "gettoken.ts"],
+    "include": ["src/**/*.ts", "gettoken.ts","gettokenfromfunction.ts"],
+
     "exclude": ["src/**/*.spec.ts"] 
   }
